# tallow

./: .gitignore  .travis.yml  AUTHORS  Makefile.am  README.md  TODO  configure.ac  data.c  json.c  tallow.1  tallow.1.md  tallow.c  tallow.conf  tallow.conf.5  tallow.conf.5.md
.github/workflows/: ccpp.yml
data/: dovecot.json  sshd.json  tallow.service.in
man/: tallow.1  tallow.1.md  tallow.conf.5  tallow.conf.5.md  tallow.patterns.5  tallow.patterns.5.md
src/: data.c  data.h  json.c  json.h  tallow.c
